<resources>
    <string name="app_name">Store</string>
    <string name="greet">We\'re glad to see you</string>
    <string name="auth_button">Sign In</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="sign_up_button_text">I\'m new user</string>
    <string name="auth_login_hint">Login</string>
    <string name="auth_password_hint">Password</string>
    <string name="auth_firstname_hint">Firstname</string>
    <string name="auth_lastname_hint">Lastname</string>
    <string name="pass_visibility" translatable="false">password visibility</string>
    <string name="passwordEmpty">Password must be at least 6 characters long</string>
    <string name="loginAlreadyExists">Login already exists</string>
    <string name="logInError">Incorrect login or password</string>
    <string name="loginInvalidFormat">Login should contain at least 5 only latin alphabet symbols and cannot contain only digits</string>
    <string name="passwordInvalidFormat">Password should contain at least 6 only latin alphabet symbols and cannot contain only digits</string>
    <string name="logInErrorConnectionIssue">Seems like you have connection issues</string>
    <string name="userStoppedOrDeleted">Seems like your account was stopped</string>
    <string name="unknownRealmError">Seems like we\'re having problems with DB</string>
    <string name="price_filter">Price</string>
    <string name="color_filter">Color</string>
    <string name="in_stock_filter">In stock</string>
    <string name="filters">Filters</string>
    <string name="apply_filters">Apply</string>

</resources>